tests/cfg/js/success/ast_hoist4.js
var g;
var f=3;
function f(){ return 0; }
function f(){};
var f=5;
var g=42;
f();
